--- a/app/views/adventures/_form.html.erb
+++ b/app/views/adventures/_form.html.erb
@@ -30,4 +30,8 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+  <div class="field">
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
+  </div>
 <% end %>
