--- a/app/views/adventures/show.html.erb
+++ b/app/views/adventures/show.html.erb
@@ -3,6 +3,16 @@
 <div class="row">
   <div class="col-md-9">
     <%= image_tag(@adventure.picture_url, width: '100%') if @adventure.picture.present? %>
+    <h3>Comments</h3>
+<% @comments.each do |comment| %>
+  <div>
+    <strong><%= comment.user_name %></strong>
+    <br />
+    <p><%= comment.body %></p>
+    <p><%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %></p>
+  </div>
+<% end %>
+<%= render 'comments/form' %>
   </div>
 
       <div class="col-md-3">
@@ -14,4 +24,9 @@
       <%= link_to 'Back', adventures_path %>
     </p>
   </div>
+   <p><b>Name: </b><%= @adventure.name %></p>
+    <p><b>Description: </b><%= @adventure.description %></p>
+    <p><b>Address: </b><%= @adventure.address %></p>
+    <p><b>Latitude: </b><%= @adventure.latitude %></p>
+    <p><b>Longitude: </b><%= @adventure.longitude %></p>
 </div>
